k3s/addons/openelb/openelb-0.4.4/yaml/deployment-openelb-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openelb-manager
    control-plane: openelb-manager
  name: openelb-manager
  namespace: openelb-system
spec:
  selector:
    matchLabels:
      app: openelb-manager
      control-plane: openelb-manager
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: openelb-manager
        control-plane: openelb-manager
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - openelb-manager
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - --api-hosts=:50051
        - --webhook-port=30443
        command:
        - openelb-manager
        image: kubesphere/openelb:v0.4.4
        imagePullPolicy: IfNotPresent
        name: openelb-manager
        ports:
        - containerPort: 30443
          name: webhook
          hostPort: 30443
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              gobgp -p 50051 global
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_TIME
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs/
          name: webhook-cert
          readOnly: true
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: openelb-admission
      terminationGracePeriodSeconds: 10
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - name: webhook-cert
        secret:
          items:
          - key: key
            path: tls.key
          - key: cert
            path: tls.crt
          secretName: openelb-admission
