k3s/addons/openelb/openelb-0.4.4/yaml/mutatingwebhookconfiguration-openelb-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: openelb-admission
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    service:
      name: openelb-admission
      namespace: openelb-system
      path: /validate-network-kubesphere-io-v1alpha2-svc
  failurePolicy: Fail
  name: mutating.eip.network.kubesphere.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
  sideEffects: NoneOnDryRun
