k3s/addons/openelb/openelb-0.4.4/yaml/validatingwebhookconfiguration-openelb-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: openelb-admission
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    service:
      name: openelb-admission
      namespace: openelb-system
      path: /validate-network-kubesphere-io-v1alpha2-eip
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.eip.network.kubesphere.io
  rules:
  - apiGroups:
    - network.kubesphere.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - eips
  sideEffects: None
